Se crea un metodo para hacer que las tarjetas se revuelvan de manera aleatoria + un boton de inicio

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <link rel="stylesheet" href="./css/css.css">
 </head>
 <body>
+    <div id="iniciar" class="iniciar">
+        
+    </div>
+    <div id="root" class="root">
 
-        <div id="root">
-            <!--Contenido-->
-        </div>
+    </div>
 
     <script src="./js/main.js" type="module"></script>
 </body>
